--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,12 @@
             "email": "dev@25xj.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": ">=5.4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Melodic\\Tongji\\": "src/"
+        }
+    }
 }
