--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
             "Melodic\\Tongji\\": "src/"
         },
         "files": [
-            "src/helpers.php"
+            "src/helper.php"
         ]
     }
 }
