--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Melodic\\Tongji\\": "src/"
+            "Melodic\\BaiduTongji\\": "src/"
         },
         "files": [
             "src/helper.php"
